--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+<meta name="theme-color" content="#FFB347" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta name="description" content="Official website of Rachit Srivastava - Rapper, Singer, Music Producer, Mix Engineer, and Lyricist. Coming Soon!">
   <meta name="keywords" content="Rachit Srivastava, rapper, singer, music producer, mix engineer, lyricist, official website, Rachit Srivastava music">
